# codeGenOnnx

./: .gitignore  00_pytorchToOnnx.md  README.md
01_Matlab/: README.md  buildGenericCoder.m  model31.onnx  model31_func.m  network_modle31.mat  unitTest.m  unitTest.mat
01_Matlab/unitTestExampleFiles/: unitTest.h  unitTest_out.h  unitTest_outErr.csv  unitTest_pytorch.csv
02_CMake/: README.md  clearSrcUT.sh  importFiles.sh
02_CMake/const_src/: CMakeLists.txt  main.cpp  main.h  unitTest.h  unitTest_out.h
03_ROS/: README.md
03_ROS/rl_explore/: CMakeLists.txt  FullyConnectedActivation.cpp  FullyConnectedActivation.h  model31_func.cpp  model31_func.h  model31_func_data.cpp  model31_func_data.h  model31_func_initialize.cpp  model31_func_initialize.h  model31_func_internal_types.h  model31_func_terminate.cpp  model31_func_terminate.h  model31_func_types.h  package.xml  predict.cpp  predict.h  rl_exp_node.cpp  rtwtypes.h  string1.h
03_ROS/rl_explore/include/: package.xml
03_ROS/rl_explore/launch/: runRL_explore.launch
03_ROS/rl_explore/scripts/: config.rviz
